--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 3,
    "id": "62a61fbafba2189e",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 4,
    "id": "ed16bde6adbe21ef",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        " ['X', 'X', 'X', 'X', 'X', 'X', 'X', 'X', 'X', 'X']]"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 1,
    "id": "2e84c93ed636714",
    "metadata": {},
    "outputs": [],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 2,
    "id": "33d0b1dfd4b56bfd",
    "metadata": {},
    "outputs": [
@@ -650,8 +650,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial state:\n",
-      "1st step:\n"
+      "Initial state:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'print_board' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Test your function\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInitial state:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mprint_board\u001b[49m(glider_board)\n\u001b[0;32m      5\u001b[0m next_step \u001b[38;5;241m=\u001b[39m step(glider_board)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1st step:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'print_board' is not defined"
      ]
     }
    ],
@@ -760,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
